build_error.log
    Checking MicMuteRs v0.1.0 (C:\Users\papop\Desktop\TaskScheduler\MicMuteRs)
error[E0433]: failed to resolve: could not find `ClickType` in `tray_icon`
  --> src\gui.rs:59:31
   |
59 |             if let tray_icon::ClickType::Double = event.click_type {
   |                               ^^^^^^^^^ could not find `ClickType` in `tray_icon`

error[E0609]: no field `click_type` on type `TrayIconEvent`
  --> src\gui.rs:59:57
   |
59 |             if let tray_icon::ClickType::Double = event.click_type {
   |                                                         ^^^^^^^^^^ unknown field

warning[E0133]: dereference of raw pointer is unsafe and requires unsafe block
  --> src\hotkey.rs:60:30
   |
60 |             let kbd_struct = *(l_param.0 as *const KBDLLHOOKSTRUCT);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior
note: an unsafe function restricts its caller, but its body is safe by default
  --> src\hotkey.rs:56:1
   |
56 | unsafe extern "system" fn hook_callback(n_code: i32, w_param: WPARAM, l_param: LPARAM) -> LRESULT {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[warn(unsafe_op_in_unsafe_fn)]` (part of `#[warn(rust_2024_compatibility)]`) on by default

warning[E0133]: call to unsafe function `windows::Win32::UI::WindowsAndMessaging::CallNextHookEx` is unsafe and requires unsafe block
  --> src\hotkey.rs:70:5
   |
70 |     CallNextHookEx(None, n_code, w_param, l_param)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>
   = note: consult the function's documentation for information on how to avoid undefined behavior

warning: variable does not need to be mutable
   --> src\config.rs:126:31
    |
126 |                     if let Ok(mut config) = serde_json::from_str::<Self>(&content) {
    |                               ----^^^^^^
    |                               |
    |                               help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0133, E0433, E0609.
For more information about an error, try `rustc --explain E0133`.
warning: `MicMuteRs` (bin "MicMuteRs") generated 3 warnings
error: could not compile `MicMuteRs` (bin "MicMuteRs") due to 2 previous errors; 3 warnings emitted
